--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   },
   "dependencies": {
     "@neumie/vexchords": "^1.2.26",
-    "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-select": "^5.7.0",
-    "vexchords": "^1.2.0"
+    "react-select": "^5.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
